[gd_scene load_steps=7 format=2]

[ext_resource path="res://prepare.gd" type="Script" id=1]
[ext_resource path="res://img/lame-backdrop.png" type="Texture" id=2]
[ext_resource path="res://fonts/header-font-1.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/base-text-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://upgrade.tscn" type="PackedScene" id=5]
[ext_resource path="res://BGM/pongal preparation-short.ogg" type="AudioStream" id=6]

[node name="Preparation" type="Node"]

script = ExtResource( 1 )
credits = null
wave_num = null
intelligence = "To barrel roll, press Z or R twice."
status = null

[node name="lame-backdrop" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 400 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="margin" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 20
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "custom_constants" ]

[node name="vbox" type="VBoxContainer" parent="margin" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 20.0
margin_right = 624.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="LblHeader" type="Label" parent="margin/vbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 608.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "PREPARE FOR THE NEXT WAVE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="LblCredits" type="Label" parent="margin/vbox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 608.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Credits: 9999"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="margin" type="MarginContainer" parent="margin/vbox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 608.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30
_sections_unfolded = [ "Rect" ]

[node name="grid" type="GridContainer" parent="margin/vbox/margin" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 588.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 4
custom_constants/hseparation = 16
columns = 2
_sections_unfolded = [ "Focus", "Rect", "Size Flags", "custom_constants" ]

[node name="upgrade_speed" parent="margin/vbox/margin/grid" index="0" instance=ExtResource( 5 )]

position = Vector2( -13.2317, -1.47019 )
upgrade_name = "Paddle Speed"
upgrade_description = "Makes it faster"
upgrade_id = "speed"
maximum_upgrade = 4
price = [ 20, 35, 50, 100 ]

[node name="upgrade_stability" parent="margin/vbox/margin/grid" index="1" instance=ExtResource( 5 )]

position = Vector2( -13.9668, 60.9885 )
upgrade_name = "Stability"
upgrade_description = "More acceleration, less inertia"
upgrade_id = "stability"
maximum_upgrade = 4
price = [ 15, 30, 50 ]

[node name="upgrade_length" parent="margin/vbox/margin/grid" index="2" instance=ExtResource( 5 )]

position = Vector2( -17.6423, 121.29 )
upgrade_name = "Paddle Length"
upgrade_description = "Increased paddle dimensions"
upgrade_id = "length"
maximum_upgrade = 4
price = [ 25, 50, 10, 160 ]

[node name="upgrade_resistance" parent="margin/vbox/margin/grid" index="3" instance=ExtResource( 5 )]

position = Vector2( -13.9666, 183.774 )
upgrade_name = "Stun Resistance"
upgrade_description = "Decrease stun time"
upgrade_id = "resistance"
maximum_upgrade = 2
price = [ 10, 20 ]

[node name="upgrade_forcefield" parent="margin/vbox/margin/grid" index="4" instance=ExtResource( 5 )]

position = Vector2( 305.799, 0.735092 )
upgrade_name = "Base Force Field"
upgrade_description = "Increase base resistance"
upgrade_id = "forcefield"
maximum_upgrade = 2
price = [ 50, 85 ]

[node name="upgrade_gun" parent="margin/vbox/margin/grid" index="5" instance=ExtResource( 5 )]

position = Vector2( 304, 62 )
upgrade_name = "Gun"
upgrade_description = "Ballistic fire weapon"
upgrade_id = "gun"
price = [ 80 ]

[node name="upgrade_gun_rate" parent="margin/vbox/margin/grid" index="6" instance=ExtResource( 5 )]

position = Vector2( 304, 122 )
upgrade_name = "Fire Rate"
upgrade_description = "Shorter recoil, more bullets"
upgrade_id = "gun_rate"
maximum_upgrade = 3
price = [ 75, 100, 140 ]

[node name="LblIntelTitle" type="Label" parent="margin/vbox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 292.0
margin_right = 608.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Intelligence Report:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="LblIntel" type="Label" parent="margin/vbox" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 313.0
margin_right = 608.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "To barrel roll, press Z or R twice."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Rect", "custom_fonts" ]

[node name="BtnNext" type="Button" parent="margin/vbox" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 330.0
margin_right = 608.0
margin_bottom = 349.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Wave"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "custom_colors", "custom_fonts" ]

[node name="BGMPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 6 )
volume_db = -0.25
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_speed" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_stability" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_length" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_resistance" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_forcefield" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_gun" to="." method="_on_upgrade_request_purchase"]

[connection signal="request_purchase" from="margin/vbox/margin/grid/upgrade_gun_rate" to="." method="_on_upgrade_request_purchase"]

[connection signal="pressed" from="margin/vbox/BtnNext" to="." method="_on_BtnNext_pressed"]


